--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <p>This is <strong>bold</strong> text, and this is <em>emphasized</em> text.</p>
 <p>Visit the <a href="https://gohugo.io">Hugo</a> website!</p>
 <h2 id="説明">説明</h2>
-<p>日本語で説明をします。。</p>
+<p>日本語で説明をします。</p>
         </div>
         <a href="/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
       </div>
